--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class = "resumetext" style = "position:relative; bottom:120px">
-            <h2 class = "title" style = "width:400px">Check out my Resume! Feel free to contact me at the information listed.</h2>
+            <h2 class = "resumetitle">Check out my Resume! Feel free to contact me at the information listed.</h2>
         </div>
         
         <div class = "resume">
