Second page for resume working

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     </head>
 
     <body>
-        <ul>
-            <li>About me</li>
-            <li>Resume</li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href = "index.html">About me</a></li>
+                <li><a href = "resumepage.html">Resume</a></li>
+            </ul>
+        </nav>
 
         <div class = "header">
             <div style = "position:absolute; left: 200px; top: 160px;">
@@ -35,16 +37,6 @@
                 parents and older brother. 
             </h4>
         </div>
-
-        <div class = "resumetext" style = "position:relative; bottom:120px">
-            <h2 class = "resumetitle">Check out my Resume! Feel free to contact me at the information listed.</h2>
-        </div>
-        
-        <div class = "resume">
-            <iframe src="./images/QuinnSammsResume.pdf" width = "600px" height = "750px"  title = "QuinnSammsResume"></iframe>
-        </div>
-
-
     </body>
 </html>
 
