minimalist working w/o pics

--- a/index.html
+++ b/index.html
@@ -6,37 +6,28 @@
         <link rel = "stylesheet" href = "styles.css">
     </head>
 
-    <body>
+    <body class = "homepage">
         <nav>
             <ul>
-                <li><a href = "index.html">About me</a></li>
+                <li style = "float:left;"><a href = index.html>Home</a></li>
+                <li><a href = "aboutmepage.html">About me</a></li>
                 <li><a href = "resumepage.html">Resume</a></li>
             </ul>
         </nav>
 
-        <div class = "header">
-            <div style = "position:absolute; left: 200px; top: 160px;">
-                <img src="./images/me.png" class = "image" alt = "picture of me">
-            </div>
-            <div class = headertext style = "position:relative; bottom:130px;">
-                <h1>Quinn Samms</h1>
-                <h4 class = "contactInfo"><img src = "./images/gradcap.png" class = "icons" alt = "gradcap">Computer Science and Engieering Student at Santa Clara University</h4>
-                <h4 class = "contactInfo"><img src = "./images/linkedin.png" class = "icons" alt = "linkedin">
-                        <a href = "https://www.linkedin.com/in/quinn-samms-aa179819a/">LinkedIn</a> </h4>
-                <h4 class = "contactInfo"><img src = "./images/email.jpg" class = "icons" alt = "email">
-                         qsamms11@gmail.com</h4>
-                <h4 class = "contactInfo"><img src = "./images/phone.webp" class = "icons" alt = "phone:">
-                    (480)-522-6232</h4>
-            </div>
+        <div style = "position:absolute; left: 40px; top: 90px;">
+            <img src="./images/me.png" class = "image" alt = "picture of me">
+            <h1 style = "position:absolute; bottom: 45px; left:180px; width: 300px;">
+                Quinn Samms
+            </h1>
         </div>
 
-        <div class = "headerv2">
-            <h1 class = "title">About me:</h1>
-            <h4 class = "text">Hello! My name is Quinn Samms and I'm a Computer Science and Engieering major at Santa Clara University. 
-                I was born in Mountain View, California but I've lived most of my life in Gilbert, Arizona where I currently live with my 
-                parents and older brother. 
-            </h4>
+        <div class = "middle">
+            <h1 style = "font-size:60px;"><center>Hello!</center></h1>
+            <h3><center>I'm Quinn, a Computer Science and Engienering Student,</center></h3>
+            <h3><center>Welcome to my Website.</center></h3>
         </div>
+
     </body>
 </html>
 
