--- a/resumepage.html
+++ b/resumepage.html
@@ -7,20 +7,21 @@
         <link rel = "stylesheet" href = "styles.css">
     </head>
 
-    <body>
+    <body class = "resumepage">
         <nav>
             <ul>
-                <li><a href = "index.html">About me</a></li>
+                <li style = "float:left;"><a href = "index.html">Home</a></li>
+                <li><a href = "aboutmepage.html">About me</a></li>
                 <li><a href = "resumepage.html">Resume</a></li>
             </ul>
         </nav>
 
-        <div class = "resumetext">
-            <h2 class = "resumetitle">Check out my Resume! Feel free to contact me at the information listed.</h2>
+        <div>
+            <h1 class = "resumetitle">Check out my Resume!</h2>
         </div>
         
         <div class = "resume">
-            <iframe src="./images/QuinnSammsResume.pdf" width = "600px" height = "750px"  title = "QuinnSammsResume"></iframe>
+            <iframe src="./images/QuinnSammsResume.pdf" width = "600px" height = "700px"  title = "QuinnSammsResume"></iframe>
         </div> 
     </body>
 
