added pics to about me section

--- a/aboutmepage.html
+++ b/aboutmepage.html
@@ -4,6 +4,7 @@
         <meta charset = "utf-8">
         <title>About me!</title>
         <link rel = "stylesheet" href = "styles.css">
+        <link rel = "stylesheet" href = "aboutmepage.css">
     </head>
 
     <body class = "aboutmepage">
@@ -18,7 +19,7 @@
 
         <div class = "headerv2">
             <h1 class = "title">About me:</h1>
-            <h4 class = "text">Hello! My name is Quinn Samms and I'm a junior Computer Science and Engieering major at Santa Clara University. 
+            <h4 class = "text">Hello! My nameis Quinn Samms and I'm a junior Computer Science and Engieering major at Santa Clara University. 
                 I was born in Mountain View, California but I've lived most of my life in Gilbert, Arizona where I currently live with my 
                 parents and older brother. I got interested in CS from messing with computers when I was young(and playing lots of video games). 
                 I became facinated with such complex machines and wanted to understand them. I love watching baseball and basketball(Giants and Suns are my teams), 
@@ -26,6 +27,14 @@
                 to learn new things from new people.  
             </h4>
         </div>
+
+        <div class = "picgroup"><center>
+        <img src = "./images/swing.png" class = "pics" alt = "swing pic">
+        <img src = "./images/mefinnjosh.png" class = "pics" alt = "me and friends">
+        <img src = "./images/giants.png" class = "pics" alt = "giants">
+        <img src = "./images/suns.png" class = "pics"  alt = "suns">
+        </center></div>
+
     </body>
 
 </html>
