added logos and links to socials

--- a/resumepage.html
+++ b/resumepage.html
@@ -10,9 +10,9 @@
     <body class = "resumepage">
         <nav>
             <ul>
-                <li style = "float:left;"><a href = "index.html">Home</a></li>
-                <li><a href = "aboutmepage.html">About me</a></li>
-                <li><a href = "resumepage.html">Resume</a></li>
+                <li style = "float:left;" class = "list"><a href = "index.html">Home</a></li>
+                <li class = "list"><a href = "aboutmepage.html">About me</a></li>
+                <li class = "list"><a href = "resumepage.html">Resume</a></li>
             </ul>
         </nav>
 
