--- a/aboutmepage.html
+++ b/aboutmepage.html
@@ -11,20 +11,20 @@
 
         <nav>
             <ul>
-                <li style = "float:left;"><a href = index.html>Home</a></li>
-                <li><a href = "aboutmepage.html">About me</a></li>
-                <li><a href = "resumepage.html">Resume</a></li>
+                <li style = "float:left;" class = "list"><a href = index.html>Home</a></li>
+                <li class = "list"><a href = "aboutmepage.html">About me</a></li>
+                <li class = "list"><a href = "resumepage.html">Resume</a></li>
             </ul>
         </nav>
 
         <div class = "headerv2">
             <h1 class = "title">About me:</h1>
-            <h4 class = "text">Hello! My nameis Quinn Samms and I'm a junior Computer Science and Engieering major at Santa Clara University. 
+            <h4 class = "text">Hello! My name is Quinn Samms and I'm a junior Computer Science and Engieering major at Santa Clara University. 
                 I was born in Mountain View, California but I've lived most of my life in Gilbert, Arizona where I currently live with my 
                 parents and older brother. I got interested in CS from messing with computers when I was young(and playing lots of video games). 
-                I became facinated with such complex machines and wanted to understand them. I love watching baseball and basketball(Giants and Suns are my teams), 
-                working out, and spending time with those I care about. Additonally, I have a strong passion for knowlege and growth and I always love 
-                to learn new things from new people.  
+                I became facinated with such complex machines and wanted to understand them. I love watching baseball and basketball(Giants and Suns are my teams),
+                playing video games, working out, and spending time with those I care about. Additonally, I have a strong passion for knowlege and growth and I always love 
+                to learn new things from new people. I strive to succeed in everything I commit myself to. Have fun exploring my site!
             </h4>
         </div>
 
