--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     <body class = "homepage">
         <nav>
             <ul>
-                <li style = "float:left;"><a href = index.html>Home</a></li>
-                <li><a href = "aboutmepage.html">About me</a></li>
-                <li><a href = "resumepage.html">Resume</a></li>
+                <li style = "float:left;" class = "list"><a href = index.html>Home</a></li>
+                <li class = "list"><a href = "aboutmepage.html">About me</a></li>
+                <li class = "list"><a href = "resumepage.html">Resume</a></li>
             </ul>
         </nav>
 
-        <div style = "position:absolute; left: 40px; top: 90px;">
+        <div style = "position:absolute; left: 30px; top: 90px;">
             <img src="./images/me.png" class = "image" alt = "picture of me">
             <h1 style = "position:absolute; bottom: 45px; left:180px; width: 300px;">
                 Quinn Samms
             </h1>
+        </div>
+
+        <div class = "logogroup">
+            <li style = "display:inline-block;">
+                <a href = "https://www.github.com/qsamms"><img src = "./images/github.png" class = "logo" alt = "github" style = "height:80px; position:relative; right:10px;"></a>
+                <a href = "https://www.linkedin.com/in/quinn-samms-aa179819a/"><img src = "./images/linkedin.png" class = "logo" alt = "linkedin"></a>
+                <a href = "mailto: qsamms11@gmail.com"><img src = "./images/mail.png" class = "logo" alt = "mail" style = "height:50px; position:relative; top:10px; left:3px;"></a>
+            </li>
         </div>
 
         <div class = "middle">
