placed everything in cooresponding files

--- a/html/aboutmepage.html
+++ b/html/aboutmepage.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset = "utf-8">
         <title>About me!</title>
-        <link rel = "stylesheet" href = "styles.css">
-        <link rel = "stylesheet" href = "aboutmepage.css">
+        <link rel = "stylesheet" href = "../css/styles.css">
+        <link rel = "stylesheet" href = "../css/aboutmepage.css">
     </head>
 
     <body class = "aboutmepage">
@@ -29,10 +29,10 @@
         </div>
 
         <div class = "picgroup"><center>
-        <img src = "./images/swing.png" class = "pics" alt = "swing pic">
-        <img src = "./images/mefinnjosh.png" class = "pics" alt = "me and friends">
-        <img src = "./images/giants.png" class = "pics" alt = "giants">
-        <img src = "./images/suns.png" class = "pics"  alt = "suns">
+        <img src = "../images/swing.png" class = "pics" alt = "swing pic">
+        <img src = "../images/mefinnjosh.png" class = "pics" alt = "me and friends">
+        <img src = "../images/giants.png" class = "pics" alt = "giants">
+        <img src = "../images/suns.png" class = "pics"  alt = "suns">
         </center></div>
 
     </body>
