--- a/html/index.html
+++ b/html/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset = "utf-8">
         <title>Super Cool Site</title>
-        <link rel = "stylesheet" href = "styles.css">
+        <link rel = "stylesheet" href = "../css/styles.css">
     </head>
 
     <body class = "homepage">
         <nav>
             <ul>
-                <li style = "float:left;" class = "list"><a href = index.html>Home</a></li>
+                <li style = "float:left;" class = "list"><a href = "index.html">Home</a></li>
                 <li class = "list"><a href = "aboutmepage.html">About me</a></li>
                 <li class = "list"><a href = "resumepage.html">Resume</a></li>
             </ul>
         </nav>
 
         <div style = "position:absolute; left: 30px; top: 90px;">
-            <img src="./images/me.png" class = "image" alt = "picture of me">
+            <img src="../images/me.png" class = "image" alt = "picture of me">
             <h1 style = "position:absolute; bottom: 45px; left:180px; width: 300px;">
                 Quinn Samms
             </h1>
@@ -24,9 +24,9 @@
 
         <div class = "logogroup">
             <li style = "display:inline-block;">
-                <a href = "https://www.github.com/qsamms"><img src = "./images/github.png" class = "logo" alt = "github" style = "height:80px; position:relative; right:10px;"></a>
-                <a href = "https://www.linkedin.com/in/quinn-samms-aa179819a/"><img src = "./images/linkedin.png" class = "logo" alt = "linkedin"></a>
-                <a href = "mailto: qsamms11@gmail.com"><img src = "./images/mail.png" class = "logo" alt = "mail" style = "height:50px; position:relative; top:10px; left:3px;"></a>
+                <a href = "https://www.github.com/qsamms"><img src = "../images/github.png" class = "logo" alt = "github" style = "height:80px; position:relative; right:10px;"></a>
+                <a href = "https://www.linkedin.com/in/quinn-samms-aa179819a/"><img src = "../images/linkedin.png" class = "logo" alt = "linkedin"></a>
+                <a href = "mailto: qsamms11@gmail.com"><img src = "../images/mail.png" class = "logo" alt = "mail" style = "height:50px; position:relative; top:10px; left:3px;"></a>
             </li>
         </div>
 
