--- a/html/resumepage.html
+++ b/html/resumepage.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset = "utf-8">
         <title>My Resume</title>
-        <link rel = "stylesheet" href = "resumestyles.css">
-        <link rel = "stylesheet" href = "styles.css">
+        <link rel = "stylesheet" href = "../css/resumestyles.css">
+        <link rel = "stylesheet" href = "../css/styles.css">
     </head>
 
     <body class = "resumepage">
@@ -21,7 +21,7 @@
         </div>
         
         <div class = "resume">
-            <iframe src="./images/QuinnSammsResume.pdf" width = "600px" height = "700px"  title = "QuinnSammsResume"></iframe>
+            <iframe src="../images/QuinnSammsResume.pdf" width = "600px" height = "700px"  title = "QuinnSammsResume"></iframe>
         </div> 
     </body>
 
