--- a/html/aboutmepage.html
+++ b/html/aboutmepage.html
@@ -11,7 +11,7 @@
 
         <nav>
             <ul>
-                <li style = "float:left;" class = "list"><a href = index.html>Home</a></li>
+                <li style = "float:left;" class = "list"><a href = "../index.html">Home</a></li>
                 <li class = "list"><a href = "aboutmepage.html">About me</a></li>
                 <li class = "list"><a href = "resumepage.html">Resume</a></li>
             </ul>
