--- a/html/resumepage.html
+++ b/html/resumepage.html
@@ -10,7 +10,7 @@
     <body class = "resumepage">
         <nav>
             <ul>
-                <li style = "float:left;" class = "list"><a href = "index.html">Home</a></li>
+                <li style = "float:left;" class = "list"><a href = "../index.html">Home</a></li>
                 <li class = "list"><a href = "aboutmepage.html">About me</a></li>
                 <li class = "list"><a href = "resumepage.html">Resume</a></li>
             </ul>
