center text on homepage

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         </div>
 
         <div class = "middle">
+        <center>
             <h1 style = "font-size:60px;"><center>Hello!</center></h1>
             <h3><center>I'm Quinn, a Computer Science and Engienering Student,</center></h3>
             <h3><center>Welcome to my Website.</center></h3>
+        </center>
         </div>
 
     </body>
