--- a/html/aboutmepage.html
+++ b/html/aboutmepage.html
@@ -28,12 +28,14 @@
             </h4>
         </div>
 
-        <div class = "picgroup"><center>
+        <center>
+        <div class = "picgroup">
         <img src = "../images/swing.png" class = "pics" alt = "swing pic">
         <img src = "../images/mefinnjosh.png" class = "pics" alt = "me and friends">
         <img src = "../images/giants.png" class = "pics" alt = "giants">
         <img src = "../images/suns.png" class = "pics"  alt = "suns">
-        </center></div>
+        </div>
+        </center>
 
     </body>
 
