added page to display jobsearch project

--- a/html/resumepage.html
+++ b/html/resumepage.html
@@ -13,6 +13,12 @@
                 <li style = "float:left;" class = "list"><a href = "../index.html">Home</a></li>
                 <li class = "list"><a href = "aboutmepage.html">About me</a></li>
                 <li class = "list"><a href = "resumepage.html">Resume</a></li>
+                <div class = "dropdown">
+                    <button class = "dropbtn">Projects</button>
+                    <div class = "dropdown-content">
+                        <a href = "webscraper.html">Webscraper!</a>
+                    </div>
+                </div>
             </ul>
         </nav>
 
