--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
                 <li style = "float:left;" class = "list"><a href = "index.html">Home</a></li>
                 <li class = "list"><a href = "./html/aboutmepage.html">About me</a></li>
                 <li class = "list"><a href = "./html/resumepage.html">Resume</a></li>
+                <div class = "dropdown">
+                    <button class = "dropbtn">Projects</button>
+                    <div class = "dropdown-content">
+                        <a href = "./html/webscraper.html">Webscraper!</a>
+                    </div>
+                </div>
             </ul>
         </nav>
 
