fixed some names and deleted unnecessary files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class = "dropdown">
                     <button class = "dropbtn">Projects</button>
                     <div class = "dropdown-content">
-                        <a href = "./html/webscraper.html">Webscraper!</a>
+                        <a href = "./html/webscraper.html">JobSearch</a>
                     </div>
                 </div>
             </ul>
