--- a/html/aboutmepage.html
+++ b/html/aboutmepage.html
@@ -17,7 +17,7 @@
                 <div class = "dropdown">
                     <button class = "dropbtn">Projects</button>
                     <div class = "dropdown-content">
-                        <a href = "webscraper.html">Webscraper!</a>
+                        <a href = "webscraper.html">JobSearch</a>
                     </div>
                 </div>
             </ul>
