--- a/html/aboutmepage.html
+++ b/html/aboutmepage.html
@@ -18,6 +18,7 @@
                     <button class = "dropbtn">Projects</button>
                     <div class = "dropdown-content">
                         <a href = "webscraper.html">JobSearch</a>
+                        <a href = "spellingbeegame.html">SpellingBeeGame</a>
                     </div>
                 </div>
             </ul>
