--- a/html/spellingbeegame.html
+++ b/html/spellingbeegame.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset = "utf-8">
-        <title>My Webscraper</title>
+        <title>Spelling Bee Game!</title>
         <link rel = "stylesheet" href = "../css/resumestyles.css">
         <link rel = "stylesheet" href = "../css/styles.css">
         <link rel = "stylesheet" href = "../css/webscraperstyles.css">
@@ -17,7 +17,7 @@
                 <div class = "dropdown">
                     <button class = "dropbtn">Projects</button>
                     <div class = "dropdown-content">
-                        <a href = "webscraper.html">JobSearch</a>
+                        <a href = "webscraper.html">Webscraper</a>
                         <a href = "spellingbeegame.html">SpellingBeeGame</a>
                     </div>
                 </div>
@@ -26,15 +26,16 @@
 
         <div class = "scraperheader">
             <h1 class = "title">About:</h1>
-            <h4 class = "text">As seen in the demo, the program asks the user for a job title, location, and keywords to search for in order to match the user 
-                with a compatible job. The program searches on indeed for jobs that match this description and gives the user information on each found job, including the 
-                company, location, salary, a link to apply, and the matches that were found from the keywords the user entered. In the future I plan on deoploying this program 
-                on the web for ease of use and to create a more complete project. 
+            <h4 class = "text">This project is a simple spelling bee game that is based off the New York Times spellling bee game. The 
+                Game asks the user for a username and the user must provide as many words as possible from the given hive of letters. Each word must start with one
+                of the given letters and must be at least 3 characers long and is checked with a dictionary API to ensure it is a valid word. 
+                A timer counts down from 1 minute and once their time is done, the user's score and words are 
+                stored in a mySQL database. Past games scores and words provided can be seen on the leaderboard page from the main menu screen. 
             </h4>
         </div>
 
         <div class = "video">
-            <iframe src = "https://youtube.com/embed/IQTkaVnGO4s" width = "800px" height = "600px" title = "myvideo"></iframe>
+            <iframe src = "https://youtube.com/embed/RtDuveZ8F6M" width = "800px" height = "600px" title = "myvideo"></iframe>
         </div>
     </body>
 
