--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <button class = "dropbtn">Projects</button>
                     <div class = "dropdown-content">
                         <a href = "./html/webscraper.html">JobSearch</a>
+                        <a href = "./html/spellingbeegame.html">SpellingBeeGame</a>
                     </div>
                 </div>
             </ul>
