--- a/html/resumepage.html
+++ b/html/resumepage.html
@@ -17,6 +17,7 @@
                     <button class = "dropbtn">Projects</button>
                     <div class = "dropdown-content">
                         <a href = "webscraper.html">JobSearch</a>
+                        <a href = "spellingbeegame.html">SpellingBeeGame</a>
                     </div>
                 </div>
             </ul>
