--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class = "middle">
             <h1 style = "font-size:60px;"><center>Hello!</center></h1>
-            <h3><center>I'm Quinn, a Computer Science and Engienering Student,</center></h3>
+            <h3><center>I'm Quinn, a Computer Science and Engineering Student,</center></h3>
             <h3><center>Welcome to my Website.</center></h3>
         </div>
 
